--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -2,8 +2,9 @@
 {% block content %}
 
     <h1>hallo world</h1>
-
     <h2> Hello Joe </h2>
-
+    <h3> 2 buttons, login and ingredients </h3>
 
 {% endblock %}
+
+
