--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -5,5 +5,12 @@
 
     <h2> Hello Joe </h2>
 
+    <button onclick="window.location.href='https://google.com';">
+        Log in
+      </button>
+     <button onclick="window.location.href='https://google.com';">
+        Recipes
+      </button>
+
 
 {% endblock %}
