--- a/project/templates/ingredients/ingredients-list.html
+++ b/project/templates/ingredients/ingredients-list.html
@@ -1,1 +1,25 @@
-{% extends "base.html" %} 
+{% load static i18n %}<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project Name</title>
+
+    <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
+    <link href="{% static 'css/ingredients.css' %}" rel="stylesheet">
+    <!-- <script defer src="{% static 'js/project.js' %}"></script> -->
+</head>
+<body>
+    <h1>My ingredients</h1>
+    <input type="text" name="q" id="foodItem" placeholder="Add ingredients">
+    <button>Submit</button>
+
+    <ul class="ingredients-list">
+        <li>Egg</li>
+        <li>Rice</li>
+        <li>Bacon</li>
+        <li>Minced meat</li>
+    </ul>
+
+</body>
+</html>
