--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -1,10 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h1>hallo world</h1>
-    <h2> Hello Joe </h2>
-    <h3> 2 buttons, login and ingredients </h3>
+    <h1>Project fridge</h1>
 
+    <button class = "Login", onclick = "append_url('login')" > Login </button>
+    
+    <button class = "Ingredients", onclick="append_url('ingredients')"> Ingredients </button>
+
+    <script>
+        function append_url(new_url){
+
+            var curr_page = window.location.href;
+            
+            var new_page = curr_page + new_url;
+
+            window.location.assign(new_page);
+        }
+    </script>
+    
 {% endblock %}
 
 
