--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -11,6 +11,13 @@
 
 </head>
 <body>
+
+    <div class="topnav">
+        <a href="">Home</a>
+        <a href="username"> Profile </a>
+        <a href="recipies"> Recipies</a>
+    </div>
+
     {% block content %}
     {% endblock %}
 </body>
