--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -16,6 +16,7 @@
         <a href="">Home</a>
         <a href="username"> Profile </a>
         <a href="recipies"> Recipies</a>
+        <a href="contactus"> Contact Us</a>
     </div>
 
     {% block content %}
