--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -11,7 +11,7 @@
 
     <button class = "button Login", onclick = "append_url('login')" > Login </button>
     
-    <button class = "Ingredients", onclick="append_url('ingredients')"> Ingredients </button>
+    <button class = "button Ingredients", onclick="append_url('ingredients')"> Ingredients </button>
 
     <script>
         function append_url(new_url){
