--- a/staticfiles/css/project.css
+++ b/staticfiles/css/project.css
@@ -13,7 +13,7 @@
 }
 
 body{
-  background-color:#f8dc75;
+
   color:#78828b;
 
   text-align: center;
@@ -23,9 +23,9 @@ body{
 }
 
 .button {
-  background-color: #4CAF50; /* Green */
+  background-color: #f7f7f7; /* Green */
   border: none;
-  color: white;
+  color: rgb(0, 0, 0);
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
@@ -34,3 +34,8 @@ body{
   border: 2px solid black;
 }
 
+
+img{
+  max-width:100%;
+  height: auto;
+}
