--- a/project/static/css/ingredients.css
+++ b/project/static/css/ingredients.css
@@ -7,12 +7,41 @@ body {
 	font-size: 16px;
 }
 
-ul.ingredients-list {
-    padding-left: 0;
-    margin: 15px 15px 15px 15px;
+.pandel-body {
+    margin: 0;
+    padding-top: 30px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    padding-left: 15px;
+    width: 50%;
+    box-sizing: border-box;
+    display: inline-block;
+    /* border: 2px solid red */
 }
 
-ul.ingredients-list li {
-    margin: 0 0 10px 0;
-    list-style-type: none;
+.form__textbox {
+    padding-top: 15px;
+    padding-right: 50%;
+    padding-bottom: 0px;
+    padding-left: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: inline-block;
+    border: 0;
+    border-bottom: 2px solid gray;
+    font-size: 26px;
+    background: transparent;
+    outline: 0;
+}
+
+p.ingredient-item {
+    margin: 0px;
+    padding: 10px;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 15px;
+    font-size: 20px;
+    width: 50%;
+    display: inline-block;
 }
