--- a/project/templates/ingredients/detail.html
+++ b/project/templates/ingredients/detail.html
@@ -1,25 +1,22 @@
 {% extends "pages/ingredient-index.html" %}
 
-
-{% block ingredients-box %}
-<form action="" method="post"> {% csrf_token %}
-    <input type="text" name="scientific_name" id="scientific_name" placeholder="Add ingredients">
-    <button type="submit">Add</button>
-</form>
-{% endblock%}
-
-
 {% block ingredients-options %}
-<form action="deleteAll">
-    <input class="form-group" type="submit" value="Delete All" />
-</form>
+    <form action="deleteAll">
+        <input type="submit" value="Delete All" />
+    </form>
 {% endblock %}
 
+{% block ingredients-box %}
+    <form action="" method="post"> {% csrf_token %}
+        <input type="text" class="form__textbox" name="scientific_name" id="scientific_name" placeholder="Add ingredients">
+        <button type="submit">Add</button>
+    </form>
+{% endblock%}
 
 {% block ingredients-list %}
     {% for object in objects %}
-    <ul class="ingredients-list">
-        <li>{{ object.scientific_name }}</li>
-    </ul>
+    <p class="ingredient-item">{{ object.scientific_name }}</p>
+    <button type="submit">Delete</button>
+    <br>
     {% endfor %} 
 {% endblock%} 
