--- a/project/static/css/ingredients.css
+++ b/project/static/css/ingredients.css
@@ -1,12 +1,107 @@
 /* These styles are for ingredients.css */
 
+:root {
+    --main-radius: 5px;
+    --main-padding: 5px;
+}
+  
 body {
-    margin: 0;
-	padding: 0;
 	font-family: Arial, sans-serif;
-	font-size: 16px;
 }
 
+.container {
+    display: grid;
+    height: 100vh;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 0.2fr 1.5fr 1.2fr 0.8fr;
+    grid-template-areas:
+        "nav nav nav nav"
+        "left-sidebar main main main"
+        "left-sidebar main main main"
+        "left-sidebar main main main";
+    grid-gap: 0.2rem;
+    font-weight: 800;
+    font-size: 16px;
+    text-align: center;
+}
+
+.main-nav {
+    background: #84ffff;
+    grid-area: nav;
+    border-radius: var(--main-radius);
+    padding-top: var(--main-padding);
+}
+
+.main-container {
+    background: #84ffff;
+    grid-area: main;
+    border-radius: var(--main-radius);
+    padding-top: var(--main-padding);
+}
+
+.left-sidebar {
+    /* background: #18ffff; */
+    grid-area: left-sidebar;
+    border-radius: var(--main-radius);
+    padding-top: var(--main-padding);
+}
+
+.left-sidebar nav {
+    text-align: right;
+    grid-area: nav;
+    border-radius: var(--main-radius);
+    padding-top: var(--main-padding);
+}
+
+.left-sidebar a {
+    font-family: inherit;
+    text-decoration: none;
+    font-weight: bold;
+    margin: 1rem;
+}
+
+.left-sidebar input {
+    display: inline-block;
+    padding-top: var(--main-padding);
+    padding-right: var(--main-padding);
+    padding-bottom: var(--main-padding);
+    padding-left: var(--main-padding);
+    border: 0;
+    outline: 0;
+    text-align: center;
+    border-bottom: 2px solid gray;
+    font-size: 26px;
+    background: transparent;
+}
+
+.left-sidebar p {
+    display: inline-block;
+    text-align: left;
+    margin: 0px;
+    padding-top: 15px;
+    padding-right: var(--main-padding);
+    padding-bottom: var(--main-padding);
+    padding-left: var(--main-padding);
+    font-size: 16px;
+    width: 70%;
+    text-transform: capitalize;
+}
+
+
+@media only screen and (max-width: 550px) {
+    .container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.2fr 0.4fr 2.2fr;
+        grid-template-areas:
+        "nav"
+        "left-sidebar"
+        "main"
+    }
+}
+  
+
+
+/* 
 .pandel-body {
     margin: 0;
     padding-top: 30px;
@@ -16,7 +111,7 @@ body {
     width: 50%;
     box-sizing: border-box;
     display: inline-block;
-    /* border: 2px solid red */
+
 }
 
 .form__textbox {
@@ -32,16 +127,5 @@ body {
     font-size: 26px;
     background: transparent;
     outline: 0;
-}
+} */
 
-p.ingredient-item {
-    margin: 0px;
-    padding: 10px;
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-    padding-left: 15px;
-    font-size: 20px;
-    width: 50%;
-    display: inline-block;
-}
