--- a/project/templates/ingredients/detail.html
+++ b/project/templates/ingredients/detail.html
@@ -1,22 +1,15 @@
 {% extends "pages/ingredient-index.html" %}
 
-{% block ingredients-options %}
-    <form action="deleteAll">
-        <input type="submit" value="Delete All" />
-    </form>
-{% endblock %}
-
 {% block ingredients-box %}
-    <form action="" method="post"> {% csrf_token %}
-        <input type="text" class="form__textbox" name="scientific_name" id="scientific_name" placeholder="Add ingredients">
-        <button type="submit">Add</button>
-    </form>
+<form action="" method="post"> {% csrf_token %}
+    <input type="text" name="scientific_name" id="scientific_name" placeholder="Add ingredients">
+</form>
+
 {% endblock%}
 
 {% block ingredients-list %}
     {% for object in objects %}
-    <p class="ingredient-item">{{ object.scientific_name }}</p>
-    <button type="submit">Delete</button>
-    <br>
+        <p>{{ object.scientific_name }}</p>
+        <button type="submit">Delete</button><br>
     {% endfor %} 
 {% endblock%} 
