--- a/project/templates/pages/ingredient-index.html
+++ b/project/templates/pages/ingredient-index.html
@@ -3,22 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ingredients</title>
+    <title>Project Name</title>
 
     <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
     <link href="{% static 'css/ingredients.css' %}" rel="stylesheet">
     <!-- <script defer src="{% static 'js/project.js' %}"></script> -->
 </head>
 <body>
-    <div class="pandel-body">
-        {% block ingredients-options %}
-        {% endblock %}
+    <div class="container">
+        <nav class="main-nav">Navbar</nav>
+        <main class="main-container">Main</main>
+        <div class="left-sidebar">
+            <nav>
+                <a href="deleteAll">Delete All</a>
+                <a href="">A-Z</a>
+            </nav>
+            <!-- {% block ingredients-options %}
+            {% endblock %} -->
+            
+            {% block ingredients-box %}
+            {% endblock %}
 
-        {% block ingredients-box %}
-        {% endblock %}
-
-        {% block ingredients-list %}
-        {% endblock %}
-    </div>
+            {% block ingredients-list %}
+            {% endblock %}
+        </div>
+    </div>    
 </body>
 </html>
