--- a/staticfiles/css/project.css
+++ b/staticfiles/css/project.css
@@ -13,7 +13,7 @@
 }
 
 body{
-
+  background-color:#f8dc75;
   color:#78828b;
 
   text-align: center;
@@ -23,7 +23,7 @@ body{
 }
 
 .button {
-  background-color: #f7f7f7; /* Green */
+  background-color: #f7f7f7; /* white */
   border: none;
   color: rgb(0, 0, 0);
   padding: 15px 32px;
@@ -34,8 +34,75 @@ body{
   border: 2px solid black;
 }
 
+.container{
+  position: relative;
+}
 
 img{
   max-width:100%;
   height: auto;
+}
+
+.container .project_title{
+  position: absolute;
+  top: 4%;
+  left: 53%;
+  transform: translate(-50%, -50%);
+  font-size: 32px;
+  color: #333;
+}
+.container .project_info{
+  position: absolute;
+  top: 15%;
+  left: 53%;
+  transform: translate(-50%, -50%);
+  font-size: 24px;
+  color: #333;
+  word-break:normal;
+}
+.container .button_test{
+  position: absolute;
+  top: 25%;
+  left: 53%;
+  padding: 15px 32px;
+}
+
+
+
+
+
+
+/* Place the navbar at the bottom of the page, and make it stick */
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+
+
+
+/* Style the links inside the navigation bar */
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.navbar a.active {
+  background-color: #4CAF50;
+  color: white;
 }
