--- a/project/templates/pages/recipes.html
+++ b/project/templates/pages/recipes.html
@@ -5,10 +5,25 @@
 
 {% block content %}
     <div class="container">
-        <nav class="main-nav">Navbar</nav>
-        <main class="main-container">Main</main>
+        <header></header>
+
+        <!-- <div class="header">
+            <div class="header-left">
+                <a href="">Logo</a>
+            </div>
+            <div class="header-nav">
+                <a href="">Recipes</a>
+                <a href="">Recipes</a>
+                <a href="">Recipes</a>
+                <a href="">Recipes</a>
+            </div>
+            <div class="header-right">
+                <a href="">Login</a>
+            </div>
+        </div> -->
+        <main>Main</main>
         <div class="left-sidebar">
-            <nav><a href="deleteAll">Delete All</a><a href="">A-Z</a></nav>
+            <!-- <nav><a href="deleteAll">Delete All</a><a href="">A-Z</a></nav> -->
 
             <form action="" method="post"> 
                 {% csrf_token %}
