--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -1,1 +1,24 @@
 {% extends "base.html" %}
+{% load static %}
+
+{% block css %} <link href="{% static 'css/home.css' %}" rel="stylesheet"> {% endblock css %} 
+
+{% block content %}
+    <header class="header">
+        <!-- Logo -->
+        <div class="header-item">
+            <a class="header-link" href="{% url 'home' %}">
+                <svg width="32" height="32"><circle cx="16" cy="16" r="16" fill="white" /></svg>
+            </a>
+        </div>
+
+        <!-- Navbar -->
+        <div class="header-item header-item--full">
+            <a class="header-link mr-20" href="{% url 'ingredients-home' %}">Recipes</a>
+            <a class="header-link mr-20" href="{% url 'home' %}">Contact Us</a>
+        </div>
+
+        <!-- User/profile -->
+        <div class="header-item"><a class="header-link" href="{% url 'home' %}">Profile</a></div>
+    </header>
+{% endblock %}
