--- a/project/templates/pages/recipes.html
+++ b/project/templates/pages/recipes.html
@@ -4,37 +4,24 @@
 {% block css %} <link href="{% static 'css/ingredients.css' %}" rel="stylesheet"> {% endblock css %} 
 
 {% block content %}
-    <div class="container">
-        <header></header>
-
-        <!-- <div class="header">
-            <div class="header-left">
-                <a href="">Logo</a>
-            </div>
-            <div class="header-nav">
-                <a href="">Recipes</a>
-                <a href="">Recipes</a>
-                <a href="">Recipes</a>
-                <a href="">Recipes</a>
-            </div>
-            <div class="header-right">
-                <a href="">Login</a>
-            </div>
-        </div> -->
-        <main>Main</main>
-        <div class="left-sidebar">
-            <!-- <nav><a href="deleteAll">Delete All</a><a href="">A-Z</a></nav> -->
-
-            <form action="" method="post"> 
-                {% csrf_token %}
-                <input type="text" name="scientific_name" id="scientific_name" placeholder="Add ingredients">
-            </form> 
-
-            {% for object in objects %}
-                <p>{{ object.scientific_name }}</p>
-                <button type="submit">Delete</button><br>
-            {% endfor %} 
-
+    <header class="header">
+        <!-- Logo -->
+        <div class="header-item">
+            <a class="header-link" href="{% url 'home' %}">
+                <svg width="32" height="32"><circle cx="16" cy="16" r="16" fill="white" /></svg>
+            </a>
         </div>
-    </div>    
+
+        <!-- Navbar -->
+        <div class="header-item header-item--full">
+            <a class="header-link mr-20" href="{% url 'ingredients-home' %}">Recipes</a>
+            <a class="header-link mr-20" href="{% url 'home' %}">Contact Us</a>
+            </div>
+        </div>
+
+        <!-- User/profile -->
+        <div class="header-item"><a class="header-link" href="">Profile</a></div>
+    </header>
+
+    <h1 style="background-color:red;">Recipes</h1>
 {% endblock content %}
