--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -19,6 +19,6 @@
         </div>
 
         <!-- User/profile -->
-        <div class="header-item"><a class="header-link" href="{% url 'home' %}">Profile</a></div>
+        <div class="header-item"><a class="header-link" href="">Profile</a></div>
     </header>
 {% endblock %}
