--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -16,6 +16,11 @@
 
     </div>
 
+    <footer>
+        <p>Author: Friend<br>
+        <a href="mailto:friend@example.com">friend@example.com</a></p>
+    </footer>
+
 
 
 {% endblock %}
