--- a/project/static/css/project.css
+++ b/project/static/css/project.css
@@ -67,15 +67,23 @@ img{
   padding: 15px 32px;
 }
 
-
+footer {
+  text-align: center;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  bottom: 0;
+  overflow: hidden;
+  padding: 25px;
+  font-size: 18px;
+}
 
 
 /* Place the navbar at the bottom of the page, and make it stick */
 .navbar {
   background-color: #333;
-  overflow: hidden;
+  
   position: fixed;
-  bottom: 0;
+  
   width: 100%;
 }
 
@@ -88,9 +96,9 @@ img{
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+
   text-decoration: none;
-  font-size: 17px;
+  
 }
 
 /* Change the color of links on hover */
