--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -19,7 +19,13 @@
         <a href="contactus"> Contact Us</a>
     </div>
 
-    {% block content %}
-    {% endblock %}
+    <main class="container">
+        <div class="row">
+            <div class="col">
+            {% block content %}
+            {% endblock %}
+            </div>
+        </div>
+    </main>
 </body>
 </html>
