--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -9,9 +9,11 @@
         recipes based on your preferences</h5> 
     <img src="{%static 'images/pexels-cottonbro-4068317.jpg' %}" width="900" height="1000" >  
 
-    <button class = "button Login", onclick = "append_url('login')" > Login </button>
-    
+    <button class = "button Login", onclick = "append_url('login')" > Fake Login Button </button>
+    <a href="login" class="button">Log In</a>
+    <a href="signup" class="button">Sign Up</a>
     <button class = "button Ingredients", onclick="append_url('ingredients')"> Ingredients </button>
+
 
     <script>
         function append_url(new_url){
