--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -3,53 +3,129 @@
 
 {% block content %}
 
-    <!--TODO: Add a nested grid in here-->
-    <main class="main-container">
 
-        <div class="nested_container">
+<section class="section">
 
-            <!-- class to be box image -->            
-            <div class="box box-1">
+    <div class="containter">
 
-                <a class="recipies" href="/recipies" img>
-                    <img src="{%static 'images/Recipies.svg'%}">
-                    <p> Click to find new recipies </p>
+        <div class="columns">
+
+            <div class="column is-half has-text-centered ">
+
+                <h2 class="is-size-6 mb-5 subtitile"> View all the currently avaliable recipies </h2>
+                <a href="/recipies" class="image is-5by3">
+                    <img src="{%static 'images/Recipies.svg'%}" alt="recipies image">
+                    
                 </a>
 
             </div>
 
-            <div class="box box-2">
+            <div class="column is-half has-text-centered">
 
-                <a class="ingredients" href="/ingredients" img>
-                    <img src="{%static 'images/ingredients_banner.svg'%}">
-                    <p> View your ingredients</p>
+                <h2 class="is-size-6 mb-5 subtitile"> View your ingredients and recipies generated </h2>
+
+                <a href="/ingredients" class="image is-5by3">
+                    <img src="{%static 'images/ingredients_banner.svg'%}" alt="recipies image">
+                    
                 </a>
 
-
-            </div>
-
-            <div class="box box-3">
-                
-                <a class="social" href="/social" img>
-                    <img src="{%static 'images/share.svg'%}">
-                    <p> Social page </p>
-                </a>
-
-
-            </div>
-
-            <div class="box box-4">
-
-                <a class="carob" href="/carbon" img>
-                    <img src="{%static 'images/carbon.svg'%}">
-                    <p> View the carbon emission of your profile</p>
-                </a>
-            
             </div>
 
         </div>
+        
+    </div>
 
-    </main>
+</section>
+
+
+
+<section class="section">
+
+    <div class="container">
+
+        <h3 class="title has-text-centered is-size-4 mb-6"> Possible features </h3>
+
+        <div class="columns is-vcentered is-vcentered ">
+
+            <div class="column is-one-third">
+
+                <div class="card">
+
+                    <div class="card-image has-text-centered image is-5by3 ">
+                        <img src="{%static 'images/profile_pic.svg'%}" alt="shopping cart image">
+                    </div>
+                    <div class="card-content has-text-centered">
+                        <p> Check what ingredients you are missing for certain recipies or similar </p>
+                    </div>
+                    <footer class="card-footer">
+                        <p class="card-footer-item">
+                            <a class="has-text-grey" href="/shopping_cart"> View Cart </a>
+                        </p>
+                    </footer>
+
+                </div>
+
+
+            </div>
+
+            <div class="column is-one-third">
+
+                <div class="card">
+
+                    <div class="card-image has-text-centered image is-5by3">
+                        <img src="{%static 'images/share.svg'%}" alt="share image">
+                    </div>
+                    <div class="card-content has-text-centered">
+                        <p> Share content with others</p>
+                    </div>
+                    <footer class="card-footer mt-5">
+                        <p class="card-footer-item">
+                            <a class="has-text-grey" href="/share"> Share your fridge! </a>
+                        </p>
+                    </footer>
+
+                </div>
+
+                
+
+            </div>
+
+            <div class="column is-one-third">
+
+                <div class="card">
+
+                    <div class="card-image has-text-centered image is-5by3">
+                        <img src="{%static 'images/carbon.svg'%}" alt="shopping cart">
+                    </div>
+                    <div class="card-content has-text-centered">
+                        <p> Check how your fridge ranks in the carbon emissions of your ingredients </p>
+                    </div>
+                    <footer class="card-footer">
+                        <p class="card-footer-item">
+                            <a class="has-text-grey" href="/carbon"> Does it matter? </a>
+                        </p>
+                    </footer>
+
+                </div>
+
+
+            </div>
+
+
+        </div>
+
+
+
+    </div>
+
+
+</section>
+
+
+
+
+
+
 
 {% endblock %}
 
