--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -11,7 +11,7 @@
         <div class="columns">
             <div class="column is-half has-text-centered ">
                 <h2 class="is-size-6 mb-5 subtitile"> View all the currently avaliable recipies </h2>
-                <a href="/recipies" class="image is-5by3">
+                <a href="/recipes" class="image is-5by3">
                     <img src="{%static 'images/Recipies.svg'%}" alt="recipies image">  
                 </a>
             </div>
