--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -19,7 +19,7 @@
     <!--Header-->
     <nav class="navbar is-white has-shadow">
         <div class="navbar-brand">
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="{% url 'home' %}">
                 <img src="{%static 'images/brand.png'%}" alt="brand-logo" style="max-height: 60px">
             </a>
         </div>
