--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -32,13 +32,15 @@
                 <div class="navbar item">
                     <div class="buttons">
                         
-                        <a class="button is-primary" href="/signup">
-                            Sign up
-                        </a>
+                        {% if not request.user.is_authenticated %}
+                            <a class="button is-warning" href="/login" id="login">Login</a>
+                            <a class="button is-primary" href="/signup" id="signup">Sign up</a>
+                        {% endif %}
                         
-                        <a class="button is-warning" href="/login"> 
-                            Login
-                        </a>
+                        {% if request.user.is_authenticated %}
+                            <a class="button is-success" href="/myprofile" id="myprofile">My Profile: {{request.user.username}}</a>
+                            <a class="button is-danger" href="/logoutpage" id="logout">Logout</a>
+                        {% endif %}
     
                     </div>
                 </div>
@@ -49,9 +51,9 @@
     
     <!--Footer-->
     <footer class="footer">
-        <div class="conent has-text-centered">
+        <div class="content has-text-centered">
             <p>
-                Fridge Friend: INF-2900 @ UiT, The University of Tromso
+                Fridge Friend: INF-2900 @ UiT, University of Tromso
             </p>
         </div>
     </footer>
