Add feedback on login/out, add test cases.

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -47,6 +47,16 @@
             </div>
         </div>
     </nav>
+    
+    <!--This is used to show information messages in a bar below the navbar-->
+    {% if messages %}
+        {% for message in messages %}
+            <nav class="infobar">
+                <p id="messages">{{message}}</p>
+            </nav>
+        {% endfor %}
+    {% endif %}
+    
     {% block content %}{% endblock content %}
     
     <!--Footer-->
