tests for frontpage

--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -18,7 +18,7 @@
 
             <div class="column is-half has-text-centered">
                 <h2 class="is-size-6 mb-5 subtitle"> View your ingredients and recipies generated </h2>
-                <a href="/ingredients" class="image is-5by3">
+                <a href="/ingredients" class="image is-5by3" id = "ingredients">
                     <img src="{%static 'images/ingredients_banner.svg'%}" alt="recipies image">
                     
                 </a>
