--- a/project/templates/pages/loginpage.html
+++ b/project/templates/pages/loginpage.html
@@ -17,15 +17,15 @@
 <table>
 <tr>
     <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
+    <td id="username">{{ form.username }}</td>
 </tr>
 <tr>
     <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
+    <td id="password">{{ form.password }}</td>
 </tr>
 </table>
 
-<input type="submit" value="login">
+<input type="submit" value="login" id = "submit_login">
 <input type="hidden" name="next" value="{{ next }}">
 </form>
 
