Remove delete all button

--- a/project/templates/pages/ingredients.html
+++ b/project/templates/pages/ingredients.html
@@ -7,7 +7,7 @@
     <div class="main-container">
         <div class="left-sidebar">
             <div class="nav-item">
-                <a class="nav-link" href="{% url 'deleteAll' %}">Delete All</a>
+                <!--<a class="nav-link" href="{% url 'deleteAll' %}">Delete All</a> -->
                 <a class="nav-link" href="{% url 'home' %}">A-z</a>
             </div>
             
