--- a/project/templates/pages/ingredients.html
+++ b/project/templates/pages/ingredients.html
@@ -20,11 +20,11 @@
             {% if messages %}
             <ul class="messages">
                 {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    <li class="{{ message.tags }}">{{ message }}</li>
                 {% endfor %}
             </ul>
-            
             {% endif %}
+
             <div>
                 {% for object in food_list %}
                     <p>{{ object.name }}</p>
